--- a/BookReader/BookReader/Views/Verse/Index.cshtml
+++ b/BookReader/BookReader/Views/Verse/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookReader.Models.VerseModel>
+﻿@model IEnumerable<BookReader.Data.Models.Verse>
 
 @{
     ViewBag.Title = "Index";
