--- a/BookReader/BookReader/Views/Book/Index.cshtml
+++ b/BookReader/BookReader/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookReader.Models.BookModel>
+﻿@model IEnumerable<BookReader.Data.Models.Book>
 
 @{
     ViewBag.Title = "Index";
