--- a/BookReader/BookReader/Views/Verse/Create.cshtml
+++ b/BookReader/BookReader/Views/Verse/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookReader.Models.VerseModel
+﻿@model BookReader.Data.Models.Verse
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>VerseModel</legend>
+        <legend>Verse</legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.VerseNumber)
