--- a/BookReader/BookReader/Views/Verse/Delete.cshtml
+++ b/BookReader/BookReader/Views/Verse/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookReader.Models.VerseModel
+﻿@model BookReader.Data.Models.Verse
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>VerseModel</legend>
+    <legend>Verse</legend>
 
     <div class="display-label">VerseNumber</div>
     <div class="display-field">
