--- a/BookReader/BookReader/Views/Verse/Details.cshtml
+++ b/BookReader/BookReader/Views/Verse/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookReader.Models.VerseModel
+﻿@model BookReader.Data.Models.Verse
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <fieldset>
-    <legend>VerseModel</legend>
+    <legend>Verse</legend>
 
     <div class="display-label">VerseNumber</div>
     <div class="display-field">
