--- a/BookReader/BookReader/Views/Book/Delete.cshtml
+++ b/BookReader/BookReader/Views/Book/Delete.cshtml
@@ -19,10 +19,11 @@
         @Html.DisplayFor(model => model.Author)
     </div>
 
-    <div class="display-label">FilePath</div>
+    <div class="display-label">Book Collection</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.FilePath)
+        @Html.DisplayFor(model => model.BookCollection.Title)
     </div>
+
 </fieldset>
 @using (Html.BeginForm()) {
     <p>
