--- a/BookReader/BookReader/Views/Shared/_Layout.cshtml
+++ b/BookReader/BookReader/Views/Shared/_Layout.cshtml
@@ -15,6 +15,26 @@
 </head>
 
 <body>
-    @RenderBody()
+    <div class="page">
+        <div id="header">
+            <div id="title">
+                <h1>Book Reader</h1>
+            </div>
+            <div id="logindisplay">
+                @Html.Partial("_LogOnPartial")
+            </div>
+            <div id="menucontainer">
+                <ul id="menu">
+                    <li>@Html.ActionLink("Home", "Index", "ReadBook")</li>
+                    <li>@Html.ActionLink("Link", "LinkVerse", "Reference")</li>
+                </ul>
+            </div>
+        </div>
+        <div id="main">
+            @RenderBody()
+        </div>
+        <div id="footer">
+        </div>
+    </div>
 </body>
 </html>
